- migrated from `File` -> `Path` - extracted various constants to own modules - adjusted module dependencies accordingly - adjusted normalized Paths and symlinks support