@@ -30,16 +30,18 @@ import sap.commerce.toolset.project.descriptor.YSubModuleDescriptor;
 import sap.commerce.toolset.project.descriptor.impl.YCustomRegularModuleDescriptor;
 import sap.commerce.toolset.project.utils.FileUtils;
 import sap.commerce.toolset.settings.ApplicationSettings;
+import sap.commerce.toolset.util.FileUtilKt;
 
 import java.io.*;
+import java.nio.file.Path;
 import java.util.Collection;
 import java.util.List;
 import java.util.Properties;
 
 import static sap.commerce.toolset.HybrisConstants.*;
-import static sap.commerce.toolset.project.utils.FileUtils.toFile;
 
 // TODO: -> kotlin
+@Deprecated(since = "migrate to kotlin, improve IO operations with NIO")
 public final class ModuleGroupingUtil {
 
     private static final Logger LOG = Logger.getInstance(ModuleGroupingUtil.class);
@@ -73,8 +75,9 @@ public final class ModuleGroupingUtil {
 
     private static String[] getGlobalGroupPathOverride(final @NotNull ProjectImportContext importContext, final ModuleDescriptor moduleDescriptor) {
         final var configDescriptor = importContext.getConfigModuleDescriptor();
-        final var groupFile = new File(configDescriptor.getModuleRootDirectory(), HybrisConstants.IMPORT_OVERRIDE_FILENAME);
-        if (!groupFile.exists()) {
+        final var groupFile = configDescriptor.getModuleRootDirectory().resolve(HybrisConstants.IMPORT_OVERRIDE_FILENAME);
+
+        if (!FileUtilKt.getDirectoryExists(groupFile)) {
             createCommentedProperties(groupFile, null, GLOBAL_GROUP_OVERRIDE_COMMENTS);
         }
         return getGroupPathOverride(groupFile, moduleDescriptor);
@@ -82,28 +85,28 @@ public final class ModuleGroupingUtil {
 
 
     private static String[] getLocalGroupPathOverride(final ModuleDescriptor moduleDescriptor) {
-        final File groupFile = new File(moduleDescriptor.getModuleRootDirectory(), HybrisConstants.IMPORT_OVERRIDE_FILENAME);
-        final String[] pathOverride = getGroupPathOverride(groupFile, moduleDescriptor);
-        if (groupFile.exists() && pathOverride == null) {
+        final var groupFile = moduleDescriptor.getModuleRootDirectory().resolve(HybrisConstants.IMPORT_OVERRIDE_FILENAME);
+        final var pathOverride = getGroupPathOverride(groupFile, moduleDescriptor);
+        if (FileUtilKt.getDirectoryExists(groupFile) && pathOverride == null) {
             createCommentedProperties(groupFile, GROUP_OVERRIDE_KEY, LOCAL_GROUP_OVERRIDE_COMMENTS);
         }
         return pathOverride;
     }
 
-    private static void createCommentedProperties(final File groupFile, final String key, final String comments) {
-        try (final OutputStream out = new FileOutputStream(groupFile)) {
+    private static void createCommentedProperties(final Path groupFile, final String key, final String comments) {
+        try (final OutputStream out = new FileOutputStream(groupFile.toFile())) {
             final Properties properties = new Properties();
             if (key != null) {
                 properties.setProperty(key, "");
             }
             properties.store(out, comments);
         } catch (IOException e) {
-            LOG.error("Cannot write " + HybrisConstants.IMPORT_OVERRIDE_FILENAME + ": " + groupFile.getAbsolutePath());
+            LOG.error("Cannot write " + HybrisConstants.IMPORT_OVERRIDE_FILENAME + ": " + groupFile.toAbsolutePath());
         }
     }
 
-    private static String[] getGroupPathOverride(final File groupFile, final ModuleDescriptor moduleDescriptor) {
-        if (!groupFile.exists()) {
+    private static String[] getGroupPathOverride(final Path groupFile, final ModuleDescriptor moduleDescriptor) {
+        if (!FileUtilKt.getDirectoryExists(groupFile)) {
             return null;
         }
         // take group override from owner module for sub-modules
@@ -111,7 +114,7 @@ public final class ModuleGroupingUtil {
             ? subModuleDescriptor.getOwner().getName()
             : moduleDescriptor.getName();
         final Properties properties = new Properties();
-        try (final InputStream in = new FileInputStream(groupFile)) {
+        try (final InputStream in = new FileInputStream(groupFile.toFile())) {
             properties.load(in);
         } catch (IOException e) {
             LOG.error("Cannot read " + HybrisConstants.IMPORT_OVERRIDE_FILENAME + " for module " + moduleName);
@@ -136,20 +139,20 @@ public final class ModuleGroupingUtil {
             return getGroupPath(importContext, ySubModuleDescriptor.getOwner(), requiredYModuleDescriptorList);
         }
 
+        final var platformDirectory = importContext.getPlatformDirectory();
         if (moduleDescriptor instanceof YCustomRegularModuleDescriptor) {
-            File customDirectory = importContext.getExternalExtensionsDirectory();
+            var customDirectory = importContext.getExternalExtensionsDirectory();
 
-            if (null == customDirectory) {
-                customDirectory = new File(importContext.getPlatformDirectory(), HybrisConstants.CUSTOM_MODULES_DIRECTORY_RELATIVE_PATH);
+            if (null == customDirectory && platformDirectory != null) {
+                customDirectory = platformDirectory.resolve(ProjectConstants.Paths.INSTANCE.getBIN_CUSTOM());
             }
-            if (!customDirectory.exists()) {
+            if (customDirectory == null || !FileUtilKt.getDirectoryExists(customDirectory)) {
                 return ApplicationSettings.toIdeaGroup(ApplicationSettings.getInstance().getGroupCustom());
             }
-            customDirectory = toFile(customDirectory.getAbsolutePath());
 
             final List<String> path;
             try {
-                path = FileUtils.getPathToParentDirectoryFrom(moduleDescriptor.getModuleRootDirectory(), customDirectory);
+                path = FileUtils.getPathToParentDirectoryFrom(moduleDescriptor.getModuleRootDirectory().toFile(), customDirectory.toFile());
             } catch (IOException e) {
                 LOG.warn(String.format(
                     "Can not build group path for a custom module '%s' because its root directory '%s' is not under" +
@@ -171,12 +174,12 @@ public final class ModuleGroupingUtil {
             );
         }
 
-        if (requiredYModuleDescriptorList.contains(moduleDescriptor)) {
-            final var hybrisBinDirectory = new File(importContext.getPlatformDirectory(), ProjectConstants.Directory.BIN);
+        if (requiredYModuleDescriptorList.contains(moduleDescriptor) && platformDirectory != null) {
+            final var hybrisBinDirectory = platformDirectory.resolve( ProjectConstants.Directory.BIN);
 
             final List<String> path;
             try {
-                path = FileUtils.getPathToParentDirectoryFrom(moduleDescriptor.getModuleRootDirectory(), hybrisBinDirectory);
+                path = FileUtils.getPathToParentDirectoryFrom(moduleDescriptor.getModuleRootDirectory().toFile(), hybrisBinDirectory.toFile());
             } catch (final IOException e) {
                 LOG.warn(String.format(
                     "Can not build group path for OOTB module '%s' because its root directory '%s' is not under Hybris bin directory '%s'.",
@@ -185,8 +188,8 @@ public final class ModuleGroupingUtil {
                 return ApplicationSettings.toIdeaGroup(ApplicationSettings.getInstance().getGroupHybris());
             }
 
-            if (!path.isEmpty() && path.get(0).equals("modules")) {
-                path.remove(0);
+            if (!path.isEmpty() && path.getFirst().equals("modules")) {
+                path.removeFirst();
             }
             return ArrayUtils.addAll(ApplicationSettings.toIdeaGroup(ApplicationSettings.getInstance().getGroupHybris()), path.toArray(new String[0]));
         }
